--- a/index.html
+++ b/index.html
@@ -149,14 +149,14 @@
                     <a href="img/plants/02.jpg" target="_blank" title="Click me :)">
                         <img src="img/plants/02.jpg" alt="plant_img"></a>
 
-                    <a href="img/plants/03.jpg" target="_blank" title="Click me :)">
-                        <img src="img/plants/03.jpg" alt="plant_img"></a>
+                    <a href="img/plants/03.JPG" target="_blank" title="Click me :)">
+                        <img src="img/plants/03.JPG" alt="plant_img"></a>
 
                     <a href="img/plants/04.jpg" target="_blank" title="Click me :)">
                         <img src="img/plants/04.jpg" alt="plant_img"></a>
 
-                    <a href="img/plants/05.jpg" target="_blank" title="Click me :)">
-                        <img src="img/plants/05.jpg" alt="plant_img"></a>
+                    <a href="img/plants/05.JPG" target="_blank" title="Click me :)">
+                        <img src="img/plants/05.JPG" alt="plant_img"></a>
 
                     <a href="img/plants/06.jpg" target="_blank" title="Click me :)">
                         <img src="img/plants/06.jpg" alt="plant_img"></a>
